objects/nCBC__Credit_Report__c.object
<CustomObject>
    <fields>
        <fullName>nCBC__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nCBC__Error_Description__c</fullName>
        <description>Description of generated error message(s).</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nCBC__FICO_Score__c</fullName>
        <label>FICO Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCBC__Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__LobLegacyKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LobLegacyKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nCBC__OFAC__c</fullName>
        <label>OFAC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Underwriting_Score_Date__c</fullName>
        <label>Underwriting Score Date</label>
        <type>Date</type>
    </fields>
    <label>Credit Report</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>